[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2024"
default-run = "server"
autobins = false

[lib]
name = "proxy_rs"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.0", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
futures = "0.3"
sha2 = "0.10"
